Add short initial delay on device sync on startup; lower run interval for testing